[tool.poetry]
name = "fourier-transforms"
version = "0.1.0"
description = ""
authors = ["Palmer Turley <palmerturley34@gmail.com>"]
readme = "README.md"
packages = [{include = "fourier_transforms"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
ttkbootstrap = "^1.10.1"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
